# m8tes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  smoke-tests.yml  test.yml
examples/: README.md  customer-agent.py  demo.py  embed-oauth.py  file-report.py  imessage-bluebubbles.py  plan-mode.py  reddit-outreach.py  revenue-report.py  seo-monitor.py  support-triage.py
m8tes/: __init__.py  _auth.py  _client.py  _exceptions.py  _http.py  _streaming.py  _types.py  agent.py  chat.py  client.py  exceptions.py  instance.py  run.py  streaming.py  task.py
m8tes/_resources/: __init__.py  _utils.py  account.py  apps.py  audit_logs.py  auth.py  billing.py  bridges.py  built_in_tools.py  keys.py  mcp_servers.py  memories.py  models.py  permissions.py  runs.py  settings.py  skills.py  tasks.py  teammate_templates.py  teammates.py  users.py  webhooks.py
m8tes/auth/: __init__.py  auth.py  credentials.py  google.py  meta.py  oauth_flow.py  url_helper.py  working_server.py
m8tes/cli/: __init__.py  auth.py  base.py  display.py  google.py  main.py  mates.py  meta.py  prompt.py  registry.py  tasks.py  util.py  v2.py  validation.py
m8tes/cli/commands/: __init__.py  apps.py  auth.py  google.py  mate.py  meta.py  run.py  task.py
m8tes/http/: __init__.py  client.py
m8tes/services/: __init__.py  agents.py  instances.py  integrations.py  runs.py  tasks.py  users.py
m8tes/utils/: __init__.py  validation.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_agent_execution.py  test_cli.py  test_complete_journey.py
tests/e2e/fixtures/: __init__.py  google_ads_responses.py  meta_ads_responses.py  openai_responses.py
tests/integration/: conftest.py  test_instance_streaming.py  test_streaming_integration.py  test_streaming_mocked.py  test_v2_integration.py
tests/unit/: __init__.py  test_agent.py  test_agents_alias.py  test_cli_commands.py  test_cli_prompt.py  test_cli_registry.py  test_cli_v2.py  test_client.py  test_docs_examples.py  test_exceptions.py  test_google_cli.py  test_release_hygiene.py  test_run_detail_endpoints.py  test_streaming.py  test_v2_account.py  test_v2_auth.py  test_v2_auto_paging.py  test_v2_billing.py  test_v2_client.py  test_v2_exceptions.py  test_v2_from_dict.py  test_v2_helpers.py  test_v2_http.py  test_v2_keys.py  test_v2_lessons.py  test_v2_memories.py  test_v2_permissions.py  test_v2_poll.py  test_v2_resources.py  test_v2_schema_contract.py  test_v2_settings.py  test_v2_streaming.py  test_v2_teammate_templates.py  test_v2_teammates_self_improvement.py  test_v2_types.py  test_v2_users.py  test_v2_users_settings.py  test_v2_verify_signature.py  test_v2_webhooks.py  test_validation.py
tests/unit/auth/: __init__.py  test_credentials.py
tests/unit/cli/: test_auth_usage.py  test_display.py  test_exit_codes.py  test_mate_show_enrichment.py  test_task_commands.py
tests/unit/services/: test_agents.py  test_instances.py  test_integrations.py  test_runs.py  test_users.py
tests/utils/: __init__.py  assertions.py  factories.py  mocks.py
