[project]
name = "m8tes"
version = "0.1.0"
description = "Python SDK for m8tes.ai - AI teammates"
readme = "README.md"
requires-python = ">=3.11.9"
license = "MIT"
authors = [
    {name = "m8tes.ai", email = "support@m8tes.ai"}
]
keywords = ["ai", "marketing", "automation", "google-ads", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
]

[project.scripts]
m8tes = "m8tes.cli.main:main"

[project.urls]
Homepage = "https://m8tes.ai"
Documentation = "https://docs.m8tes.ai"
Repository = "https://github.com/m8tes/python-sdk"
Issues = "https://github.com/m8tes/python-sdk/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["m8tes*"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "N806",  # Variable in function should be lowercase (common in SDK)
    "N803",  # Argument name should be lowercase (common in SDK)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["m8tes", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
# Additional strict options
warn_unreachable = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",              # show all test results
    "--strict-markers", # strict marker validation
    "--strict-config",  # strict config validation
    "--maxfail=1",     # fail fast for quick feedback
    "--tb=short",      # concise traceback format
    "--showlocals",    # show local vars in failures
    "--durations=10",  # show 10 slowest tests
    "-m", "not e2e and not smoke"  # exclude E2E and smoke tests by default
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
xfail_strict = true
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests requiring backend",
    "e2e: End-to-end tests requiring full stack (backend + Claude Agent SDK) - COSTS MONEY!",
    "smoke: Smoke tests with real external APIs - COSTS MONEY!",
    "slow: Tests that take more than a few seconds to run",
    "api: API endpoint tests",
    "auth: Authentication and authorization tests",
    "streaming: Tests for streaming functionality",
    "google_ads: Google Ads API integration tests"
]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::PendingDeprecationWarning"
]
